--- a/client/src/components/views/Details/Details.module.css
+++ b/client/src/components/views/Details/Details.module.css
@@ -69,3 +69,9 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
   }
+
+
+.buttonDetail{
+  color: aliceblue;
+}
+
