--- a/client/src/components/404/noUrl.module.css
+++ b/client/src/components/404/noUrl.module.css
@@ -5,10 +5,12 @@
     align-items: center;
     margin: auto;
     padding: 50px;
+    height: 100vh;
 }
 
 .img404{
     width: 700px;
+    margin-top: 30px;
 }
 
 .error1{
@@ -31,6 +33,10 @@
 
 
 .btnError{
-    width: 200px;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 6px;
     background-color: rgb(128, 0, 0);
+    color: white;
+
 }
