--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,35 +1,29 @@
 .card {
   max-width: 300px;
-  height: 480px;
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
   position: relative;
   overflow: hidden;
   transition: transform 0.3s ease;
+  clip-path: polygon(20% 0%, 85% 0, 100% 10%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0 0);
 }
 
-.teams{
-  width: 100%;
-  text-align: center;
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
- font-size: 15px;
-}
 
 .card:hover {
   transform: scale(1.05);
+
 }
 
-.border {
+/* .border {
   border: 1px solid #ccc;
   padding: 10px;
-  height: 450px;
-}
+ 
+} */
 
 .imageDriver {
   width: 100%;
-  height: 300px;
+  height: 450px;
   object-fit: cover;
   border-radius: 5px;
 }
@@ -68,11 +62,9 @@ h2 {
 
 .imageOverlay {
   position: absolute; 
-  top: 59%; 
-  left: 9%; 
-  width: 72.5%;
+  width: 100%;
   text-align: center;
-  transform: translateY(-50%); 
+  transform: translateY(-100%); 
   background-color: rgba(0, 0, 0, 0.7); 
   padding: 1rem; 
 }
