--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(12, 12, 12);
+    background-color: black;
     padding: 10px;
-    margin-bottom: 10px;
   }
   
   .navbarLogo img {
@@ -14,26 +13,24 @@
   
   .navbarLinks a {
     color: white;
-    margin-left: 50px;
-    margin-right: 20px;
-    text-decoration: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 20px;
+    font-weight: 500;
   }
 
+  .navbarLinks a:hover {
+ border-bottom: 1px solid white;
+  }
   
   
   @media (max-width: 768px) {
     .navbar {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .navbarLinks {
-      margin-top: 10px;
+      flex-direction: row;
+
     }
   
     .navbarLinks a {
-      display: block;
-      margin: 5px 0;
+      margin: 10px;
     }
   }
+
