--- a/client/src/components/Paginado/Paginado.module.css
+++ b/client/src/components/Paginado/Paginado.module.css
@@ -1,38 +1,93 @@
-/* Estilos para la lista de páginas */
-.pagination {
+/* 
+.paginationb {
   list-style-type: none;
   padding: 0;
-  margin: 10px;
+  margin: 5px;
 }
 
-/* Estilos para cada elemento de página */
-.pagination li {
+.paginationb li {
   display: inline-block;
-  margin-right: 5px;
 }
 
-/* Estilos para los botones de página */
-.pagination li button {
+
+.paginationb li button {
   display: inline-block;
-  padding: 5px 10px;
   background-color: #f2f2f2;
   color: #000000;
-  border: none;
-  border-radius: 4px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
   cursor: pointer;
-  font-family: monospace;
-  font-size: 30px;
-  width: 80px;
+  font-family: "Roboto", "sans-serif";
+  font-size: 16px;
 }
 
-/* Estilos para el botón de página desactivado */
+
 .pagination li button[disabled] {
   background-color: #ccc;
   cursor: not-allowed;
 }
 
-/* Estilos para la página actual */
+
 .pagination li button.activePageButton {
   background-color: #000000;
   color: #ffffff;
+}
+
+.pageButton a {
+  font-size: 0.7em;
+  letter-spacing: 0.3em;
+  width: 120px !important;
+} */
+
+
+
+
+
+.pagination  {
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 10px;
+
+}
+
+
+.pagination  button {
+  background-color: transparent;
+  color: white;
+  border: 1px solid #ffffff;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  font-family: "Roboto", "sans-serif";
+  font-size: 20px;
+  margin: 3px 6px;
+  padding: 8px 16px;
+}
+
+.pagination  button:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+
+.pagination  button[disabled] {
+  background-color: #cccccc00;
+  cursor: not-allowed;
+}
+
+
+.pagination  button.activePageButton {
+  background-color: #000000;
+  color: #ffffff;
+  display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.pageButton{
+  display: flex;
+justify-content: center;
+align-items: center;
 }
