--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -1,52 +1,42 @@
-.search-box{
-    font-size: 20px;
-    border: solid 0.3 em;
-    display: inline-block;
-    position: relative;
-    border-radius: 2.5em;
-}
+    .search__box {
+        display: flex;
+        align-items: center;
+        position: relative;
+        font-size: 15px;
+      }
+      
+      .search__input {
+        width: 250px;
+        height: 45px;
+        border-radius: 6px;
+      }
 
-.search-box input[type=text]{
-    font-family: inherit;
-    font-weight: bold;
-    width: 5.5em;
-    height: 2.5em;
-    padding: 0.3em 2.1em 0.4em;
-    border: none;
-    box-sizing: border-box;
-    border-radius: 2.5em;
-}
 
-.boton1 {
-        cursor: pointer;
-        border: 0;
-        border-radius: 4px;
-        font-weight: 600;
-        margin: 8px 10px;
-        width: 100px;
-        padding: 10px 0;
-        box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
-        transition: 0.4s;
+      .search__button {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 100%;
+        width: 40px;
+        border-radius: 6px !important;
         background-color: rgb(177, 28, 8);
         color: white;
+        cursor: pointer !important;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: 0.4s;
       }
-
-
-      .boton1:hover {
+      
+      .search__button:hover {
+        background-color: black;
         color: white;
-        box-shadow: 0 0 20px rgb(43, 89, 126);
-        background-color: rgb(32, 68, 97);
       }
-
-
-      input {
-        margin: 15px 2px;
-        width: 250px;
-        height: 33px;
-      }
-
-      .error{
+      
+      .error {
         color: rgb(226, 8, 8);
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 15px;
       }
+      
+
