--- a/client/src/components/views/Form/Form.module.css
+++ b/client/src/components/views/Form/Form.module.css
@@ -1,133 +1,152 @@
-.container{
+.container {
   display: flex;
-  flex-direction: row-reverse;
   justify-content: center;
-  width: 100%;
+  align-items: center;
+  color: white;
+  padding: 20px;
+  min-height: 100vh;
+  background-color: rgb(21, 21, 29);
 }
 
-.container img{
-  max-width: 1000px;
-  height: 783px;
-  margin-top: 30px;
+.form {
+  display: flex;
+  flex-direction: row;
+  border-radius: 8px;
+  max-width: 1600px;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.7);
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.formImage {
+  flex: 1;
+  background-image: url("https://res.cloudinary.com/dg8awhbvm/image/upload/v1686839039/Proyecto%20JS%20vanilla/max-verstappen-anniversary-win-2020-scaled_q7vgkj.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.formContent {
+  flex: 1;
+  padding: 20px;
 }
 
 .driverForm {
-  width: 800px;
-  margin-top: 30px;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.589);
+  display: flex;
+  flex-direction: column;
+}
+
+.titleForm {
+  font-size: 36px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-bottom: 30px;
 }
 
 .formField {
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  margin-bottom: 20px;
 }
 
-label {
+.formField label {
   display: block;
   font-weight: bold;
-  font-size: 1.2rem;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: #fff;
+  margin-bottom: 5px;
+  text-align: start;
 }
 
-input[type="text"] {
-  width: 30%;
-  padding: 5px;
+.formField input,
+.formField textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
   border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-button {
-  margin-top: 30px;
-  padding: 10px 20px;
-  background-color: #da1111;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  width: 130px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.formField textarea {
+  resize: vertical;
+  height: 100px;
+  color: white;
+  background-color: rgb(55, 65, 81);
 }
 
-button:hover{
-  background-color: black;
+.selected{
+  background-color: rgb(55, 65, 81);
+  padding: 10px;
+  width: 100%;
+}
+
+.errorContainer {
+  height: 20px; /* Altura fija para el contenedor de errores */
 }
 
 .error {
-  color: rgb(255, 95, 3);
-  font-size: 13px;
-  margin-top: 5px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-weight: 700;
+  color: red;
+  font-size: 12px;
 }
 
-.titleForm{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: #fff;
-}
-
-.formImage{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 1.5rem;
-}
-
-.checkbox{
+.checkboxContainer {
+  max-height: 200px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 4px;
   display: flex;
-  flex-wrap: wrap;
-}
-
-.checkboxLabel {
-  display: flex;
-  align-items: center;
-  margin-right: 20px;
-  font-size: 2.5rem;
-}
-
-.checkboxInput {
-  width: 16px;
-  height: 16px;
-  margin-right: 8px;
-}
-
-.selector{
-  color: black;
-}
-
-.checkboxListContainer {
-  max-height: 200px; /* Altura máxima para mostrar antes de activar el scroll */
-  overflow-y: auto; /* Activar el scroll vertical si se supera la altura máxima */
+  flex-wrap: wrap; 
   margin-bottom: 15px;
 }
 
-
-
-.checkboxContainer {
-  margin-top: 1.5rem;
-}
-
-.checkboxLabel {
-  font-weight: bold;
-}
-
-.checkboxList {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Organiza las columnas automáticamente */
-  grid-gap: 0.5rem;
-  margin-top: 0.5rem;
-}
-
 .checkboxItem {
+  width: calc(50% - 10px);
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .checkboxInput {
-  margin-right: 0.5rem;
+  margin-right: 5px;
 }
 
 .checkboxText {
-  font-size: 0.9rem;
+  font-size: 14px;
 }
+
+.create {
+  background-color: rgb(177, 28, 8);
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 4px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.create:disabled {
+  border-radius: 6px;
+  margin-top: 10px;
+  padding: 10px;
+  color: white;
+  background-color: #5a0101;
+  cursor: not-allowed;
+}
+
+@media (max-width: 768px) {
+  .form {
+    flex-direction: column;
+  }
+
+  .formImage {
+    display: none;
+  }
+
+  .formField {
+    flex-direction: column;
+  }
+
+  .checkboxContainer {
+    max-height: 150px;
+  }
+}
+
+
