--- a/client/src/components/views/Home/Home.module.css
+++ b/client/src/components/views/Home/Home.module.css
@@ -1,8 +1,12 @@
 body{
-    background-image: url("https://res.cloudinary.com/dg8awhbvm/image/upload/v1686421009/Proyecto%20JS%20vanilla/18477663_rnmsgh.jpg");
+    /* background-image: url("https://res.cloudinary.com/dg8awhbvm/image/upload/v1686421009/Proyecto%20JS%20vanilla/18477663_rnmsgh.jpg"); */
+    background-color: rgb(21, 21, 29);
     background-size: cover;
 }
 
 .loading{
-    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    padding: 40px;
 }
+
